🚧 Set margin to .global-footer to prevent it from being overlapped

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,7 +1,9 @@
 .global-footer {
   padding-top: 32px;
   padding-bottom: 40px;
+  margin-bottom: $order-cta-height;
   background-color: $background;
+
   &-title {
     @include text-style(13, $dark);
     font-weight: 700;
@@ -44,6 +46,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
